# fineweb-vi-llm

./: .gitignore  README.md  pyproject.toml
fineweb_vi_llm/src/data/: tokenize_and_pack.ipynb
fineweb_vi_llm/src/model/: config.py  dese.py
fineweb_vi_llm/src/training/: train.py
fineweb_vi_llm/tokenizer/: README.md  training_vi.ipynb
scripts/: launch_train.sh
src/data/: README.md  dataset_curate.ipynb
src/fineweb_vi_llm/data/: tokenize_and_pack.ipynb
src/fineweb_vi_llm/model/: dese.py
src/fineweb_vi_llm/tokenizer/: __init__.py  add_special_tokens.ipynb
src/fineweb_vi_llm/training/: train.py
src/model/: __init__.py  config.py
src/tokenizer/: README.md  add_special_tokens.ipynb  benchmark.ipynb  extend.ipynb
