[project]
name = "dautien-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.4",
    "ipykernel>=6.30.1",
    "liger-kernel>=0.6.1",
    "matplotlib>=3.10.5",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
    "unsloth>=2025.7.2",
]
